todayshifts in enforce + small changes